--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="zh-cn">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://at.alicdn.com/t/c/font_3235850_d23ghajop85.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="/logo192.png" />
+    <meta name="theme-color" content="#00b38a" />
+    <meta name="description" content="resume starter" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="/manifest.json" />
 
-    <title>React App</title>
+    <title>Resume</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
