chore: 根据启动模式改变入口文件，webstorm 开发工具在打包时是完全不需要的

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     -->
     <link rel="manifest" href="/manifest.json" />
 
-    <title>Resume</title>
+    <title>%APP_TITLE%</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script type="module" src="src/index.tsx"></script>
+    <script type="module" src="%APP_ENTRY%"></script>
   </body>
 </html>
